--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>PISKVORKY</h1>
+    <div class="vizual">
+      <section class="obrazek">
+        <img src="uvodni.jpg" alt="ctyrlistky" />
+      </section>
+      <section class="telo">
+        <h1>Piškvorky</h1>
+        <p>
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </p>
+      </section>
+      <section class="tlacitka">
+        <a class="pravidla" href="#">Pravidla</a>
+        <a class="zacit" href="#">Začít hrát</a>
+      </section>
+    </div>
   </body>
 </html>
