--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="vizual">
-      <section class="obrazek">
-        <img src="uvodni.jpg" alt="ctyrlistky" />
-      </section>
-      <section class="telo">
-        <h1>Piškvorky</h1>
-        <p>
-          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
-          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
-          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
-          čtverečkovaný papír. Přejeme vám hodně zábavy!
-        </p>
-      </section>
-      <section class="tlacitka">
-        <a class="pravidla" href="#">Pravidla</a>
-        <a class="zacit" href="#">Začít hrát</a>
-      </section>
+    <div class="stranka">
+      <main class="vizual">
+        <section class="obrazek">
+          <img src="uvodni.jpg" alt="ctyrlistky" />
+        </section>
+        <section class="telo">
+          <h1>Piškvorky</h1>
+          <p>
+            Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+            se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+            skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+            čtverečkovaný papír. Přejeme vám hodně zábavy!
+          </p>
+        </section>
+        <section class="tlacitka">
+          <a class="pravidla" href="#">Pravidla</a>
+          <a class="zacit" href="#">Začít hrát</a>
+        </section>
+      </main>
     </div>
   </body>
 </html>
