--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Piškvorky</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
@@ -13,25 +13,21 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="stranka">
-      <main class="vizual">
-        <section class="obrazek">
-          <img src="uvodni.jpg" alt="ctyrlistky" />
-        </section>
-        <section class="telo">
-          <h1>Piškvorky</h1>
-          <p>
-            Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
-            se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
-            skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
-            čtverečkovaný papír. Přejeme vám hodně zábavy!
-          </p>
-        </section>
-        <section class="tlacitka">
-          <a class="pravidla" href="#">Pravidla</a>
-          <a class="zacit" href="#">Začít hrát</a>
-        </section>
-      </main>
-    </div>
+    <main class="vizual">
+      <img src="uvodni.jpg" alt="ctyrlistky" />
+      <section class="telo">
+        <h1>Piškvorky</h1>
+        <p>
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </p>
+      </section>
+      <section class="tlacitka">
+        <a class="pravidla" href="pravidla.html">Pravidla</a>
+        <a class="zacit" href="#">Začít hrát</a>
+      </section>
+    </main>
   </body>
 </html>
