--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main class="vizual">
-      <img src="uvodni.jpg" alt="ctyrlistky" />
+      <img class="uvodni" src="uvodni.jpg" alt="ctyrlistky" />
       <section class="telo">
         <h1>Piškvorky</h1>
         <p>
