pridej upravene html a css, ikonky

--- a/pravidla.html
+++ b/pravidla.html
@@ -20,8 +20,17 @@
           <li>Hra piškvorky je určena pro dva hráče.</li>
           <li>Hraje se na hrací ploše 10×10, tvořené poli ve tvaru čtverce.</li>
           <li>
-            Na začátku si hráči rozdělí role. Jeden bude hrát za kolečka, druhý
-            bude hrát za křížky.
+            Na začátku si hráči rozdělí role. Jeden bude hrát za kolečka,<img
+              class="ikon"
+              src="podklady/cast2/podklady/circle.svg"
+              alt="circle"
+            />
+            druhý bude hrát za křížky<img
+              class="ikon"
+              src="podklady/cast2/podklady/cross.svg"
+              alt="cross"
+            />
+            .
           </li>
           <li>
             Losem se určí, kdo bude začínat. V naší aplikaci to vylosujeme za
