pridej podklady cast3 a stranku pro hru

--- a/pravidla.html
+++ b/pravidla.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -114,7 +114,7 @@
 
       <section class="tlacitka">
         <a class="pravidla" href="pravidla.html">Pravidla</a>
-        <a class="zacit" href="#">Začít hrát</a>
+        <a class="zacit" href="hra.html">Začít hrát</a>
       </section>
     </main>
   </body>
