--- a/hra.html
+++ b/hra.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="vizual">
+    <main class="vizual bez-pozadi">
       <section>
         <h1 class="vizual_nadpis">Piškvorky</h1>
       </section>
