--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </section>
       <section class="tlacitka">
         <a class="pravidla" href="pravidla.html">Pravidla</a>
-        <a class="zacit" href="#">Začít hrát</a>
+        <a class="zacit" href="hra.html">Začít hrát</a>
       </section>
     </main>
   </body>
