uprav slozky s podklady a prepis v kodech

--- a/hra.html
+++ b/hra.html
@@ -22,23 +22,16 @@
           <div class="kontejner_ikon">
             <div class="leve_ikon">
               <div>HRAJE:</div>
-              <img
-                class="ikon_circle"
-                src="podklady/cast2/podklady/circle.svg"
-                alt="circle"
-              />
+              <img class="ikon_circle" src="images/circle.svg" alt="circle" />
             </div>
             <div class="prave_ikon">
               <a href="index.html"
-                ><img
-                  class="ikon_home"
-                  src="podklady/cast3/podklady/home.svg"
-                  alt="home"
+                ><img class="ikon_home" src="images/home.svg" alt="home"
               /></a>
               <a href="hra.html"
                 ><img
                   class="ikon_restart"
-                  src="podklady/cast3/podklady/restart.svg"
+                  src="images/restart.svg"
                   alt="restart"
               /></a>
             </div>
