--- a/pravidla.html
+++ b/pravidla.html
@@ -22,12 +22,12 @@
           <li>
             Na začátku si hráči rozdělí role. Jeden bude hrát za kolečka,<img
               class="ikon"
-              src="podklady/cast2/podklady/circle.svg"
+              src="images/circle.svg"
               alt="circle"
             />
             druhý bude hrát za křížky<img
               class="ikon"
-              src="podklady/cast2/podklady/cross.svg"
+              src="images/cross.svg"
               alt="cross"
             />
             .
@@ -59,7 +59,7 @@
         <figure class="pole">
           <img
             class="pole_img"
-            src="podklady/cast2/podklady/instructions-01.jpg"
+            src="images/instructions-01.jpg"
             alt="Situace_1"
           />
           <figcaption>
@@ -69,7 +69,7 @@
         <figure class="pole">
           <img
             class="pole_img"
-            src="podklady/cast2/podklady/instructions-02.jpg"
+            src="images/instructions-02.jpg"
             alt="Situace_2"
           />
           <figcaption>Situace po čtyřech tazích</figcaption>
@@ -77,7 +77,7 @@
         <figure class="pole">
           <img
             class="pole_img"
-            src="podklady/cast2/podklady/instructions-03.jpg"
+            src="images/instructions-03.jpg"
             alt="Situace_3"
           />
           <figcaption>Výherní pozice hráče s kolečky</figcaption>
@@ -85,7 +85,7 @@
         <figure class="pole">
           <img
             class="pole_img"
-            src="podklady/cast2/podklady/instructions-04.jpg"
+            src="images/instructions-04.jpg"
             alt="Situace_4"
           />
           <figcaption>
@@ -97,7 +97,7 @@
         <figure class="pole">
           <img
             class="pole_img"
-            src="podklady/cast2/podklady/instructions-05.jpg"
+            src="images/instructions-05.jpg"
             alt="Situace_5"
           />
           <figcaption>Výherní pozice hráče s křížky</figcaption>
@@ -105,7 +105,7 @@
         <figure class="pole">
           <img
             class="pole_img"
-            src="podklady/cast2/podklady/instructions-06.jpg"
+            src="images/instructions-06.jpg"
             alt="Situace_6"
           />
           <figcaption>Ještě jedna výherní pozice hráče s kolečky</figcaption>
