--- a/hra.html
+++ b/hra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Piškvorky-pravidla</title>
+    <title>Piškvorky-hra</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="ctverecky">
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -49,7 +49,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -61,7 +61,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -73,7 +73,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -85,7 +85,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -97,7 +97,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -109,7 +109,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -121,7 +121,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -133,7 +133,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
@@ -145,7 +145,7 @@
               <button></button>
               <button></button>
             </div>
-            <div>
+            <div class="radek">
               <button></button>
               <button></button>
               <button></button>
