uprav vyhru, zablokuj hru

--- a/hra.html
+++ b/hra.html
@@ -21,7 +21,7 @@
         <div class="hraci_pole">
           <div class="kontejner_ikon">
             <div class="leve_ikon">
-              <div>HRAJE:</div>
+              <div class="leve_text">HRAJE:</div>
               <img class="ikon_circle" src="images/circle.svg" alt="circle" />
             </div>
             <div class="prave_ikon">
