--- a/hra.html
+++ b/hra.html
@@ -28,7 +28,7 @@
               <a href="index.html"
                 ><img class="ikon_home" src="images/home.svg" alt="home"
               /></a>
-              <a href="hra.html"
+              <a href="#"
                 ><img
                   class="ikon_restart"
                   src="images/restart.svg"
